--- a/MVCMuncheese/Views/Home/Index.cshtml
+++ b/MVCMuncheese/Views/Home/Index.cshtml
@@ -9,13 +9,21 @@
             width: 350px;
             height: 576px;
         }
+
+        .jumbotron-sm {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+            height: 80%
+        }
+
     </style>
 }
 
-<div class="jumbotron">
-    <h1>Muncheese Street Food</h1>
+<div class="jumbotron jumbotron-sm">
+    <h2>Muncheese Street Food</h2>
     <p class="lead">Opciones de servicio: Consumo en el lugar · Para llevar · Entrega sin contacto</p>
-    <p><a href="https://linktr.ee/muncheesecr?fbclid=IwAR2pamTcswWFb8Y0PsFB7JoXm5OQlqi02lQeXzZ4ENtq6ukqFnQ50lfTLNs" class="btn btn-primary btn-lg">Información &raquo;</a></p>
+    <p><a href="https://linktr.ee/muncheesecr?fbclid=IwAR2pamTcswWFb8Y0PsFB7JoXm5OQlqi02lQeXzZ4ENtq6ukqFnQ50lfTLNs" class="btn btn-primary btn-sm">Información &raquo;</a></p>
 </div>
 
 
@@ -23,14 +31,14 @@
     <div class="col-md-10">
 
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
+            <!-- Indicadores -->
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
             </ol>
 
-            <!-- Wrapper for slides -->
+            <!-- slides -->
             <div class="carousel-inner" role="listbox" style="text-align:center">
                 <div class="item active">
                     <img src="~/Img/Menu1.jpg" alt="..." width="350" height="576">
@@ -71,7 +79,7 @@
                 ...
             </div>
 
-            <!-- Controls -->
+            <!-- Controles -->
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
