--- a/MVCMuncheese/Views/Facturas/Factura.cshtml
+++ b/MVCMuncheese/Views/Facturas/Factura.cshtml
@@ -2,9 +2,64 @@
 
 @{
     ViewBag.Title = "Factura";
-    
+
 }
 
+<script>
+
+    ddlClientes.change(function () {
+        var clienteId = $(this).val(); // Obtener el valor del cliente seleccionado
+        if (clienteId !== '') { // Verificar si se seleccionó un cliente
+            $.ajax({
+                url: '/Factura/GetTelefonoCliente',
+                type: 'GET',
+                data: { clienteId: clienteId },
+                success: function (response) {
+                    txtTelefono.val(response); // Asignar el número de teléfono al campo correspondiente
+                },
+                error: function () {
+                    console.log('Error al obtener el número de teléfono del cliente.');
+                }
+            });
+        } else {
+            txtTelefono.val(''); // Limpiar el campo si no hay cliente seleccionado
+        }
+    });
+
+    $(document).ready(function() {
+        $("#Cliente").change(function() {
+            var clienteSeleccionado = $(this).val();
+            $.ajax({
+                url: "@Url.Action("ObtenerTelefonoCliente", "Factura")",
+                data: { nombreCliente: clienteSeleccionado },
+                type: "POST",
+                success: function(respuesta) {
+                    $("#Tel_Cliente").val(respuesta);
+                },
+                error: function() {
+                    console.log("Error al obtener el número de teléfono del cliente.");
+                }
+            });
+        });
+    });
+
+    $.ajax({
+    url: '@Url.Action("ObtenerTelefonoCliente", "Facturas")',
+    type: 'GET',
+    dataType: 'json',
+    data: { cliente: selectedCliente }, // Enviar el nombre del cliente seleccionado como parámetro
+    success: function (telefono) {
+        // Asignar el número de teléfono al campo correspondiente
+        $("#txtTelefono").val(telefono);
+        $("#txtTelefono").show(); // Mostrar el campo de texto
+    },
+    error: function () {
+        console.log('Error al obtener el número de teléfono del cliente.');
+    }
+});
+
+    
+</script>
 
 <div>
     <h3 style="text-align:center;">
@@ -28,18 +83,17 @@
                 <div class="form-group row">
                     @Html.LabelFor(model => model.mesa, htmlAttributes: new { @class = "col-sm-3 col-form-label" })
                     <div class="col-sm-6">
-                        @Html.DropDownListFor(model => model.mesa, Model.MesasActivas, "- Mesas -", new { @class = "form-control form-control-lg", style = "height: 33px;" })
+                        @Html.DropDownListFor(model => model.mesa, Model.MesasActivas, "-- Mesa --", new { @class = "form-control", id = "mesa-dropdown" })
                         @Html.ValidationMessageFor(model => model.mesa, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
 
-
             <div class="col-md-3">
                 <div class="form-group row">
                     @Html.LabelFor(model => model.Id_Orden, htmlAttributes: new { @class = "col-sm-3 col-form-label" })
                     <div class="col-sm-6">
-                        @Html.EditorFor(model => model.Id_Orden, new { htmlAttributes = new { @class = "form-control form-control-lg", style = "height: 30px;" } })
+                        @Html.DropDownListFor(model => model.Id_Orden, Enumerable.Empty<SelectListItem>(), "-- Orden --", new { @class = "form-control", id = "orden-dropdown" })
                         @Html.ValidationMessageFor(model => model.Id_Orden, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -48,8 +102,8 @@
             <div class="col-md-3 text-right">
                 <div class="form-group row">
                     @Html.LabelFor(model => model.fecha, htmlAttributes: new { @class = "col-sm-3 col-form-label" })
-                    <div class="col-sm-6">
-                        @Html.EditorFor(model => model.fecha, new { htmlAttributes = new { @class = "form-control form-control-lg", style = "height: 30px;" } })
+                    <div class="col-sm-7">
+                        @Html.EditorFor(model => model.fecha, new { htmlAttributes = new { @class = "form-control form-control-lg", style = "height: 30px;", type = "date" } })
                         @Html.ValidationMessageFor(model => model.fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -57,9 +111,19 @@
 
             <div class="col-md-3">
                 <div class="form-group row">
-                    @Html.LabelFor(model => model.Tel_Cliente, htmlAttributes: new { @class = "col-sm-3 col-form-label" })
+                    @Html.LabelFor(model => model.Cliente, htmlAttributes: new { @class = "col-sm-3 col-form-label" })
                     <div class="col-sm-6">
-                        @Html.EditorFor(model => model.Tel_Cliente, new { htmlAttributes = new { @class = "form-control form-control-lg", style = "height: 30px;" } })
+                        @Html.DropDownListFor(model => model.Cliente, Model.Clientes, "Cliente", new { @class = "form-control", id = "ddlClientes" })
+                        @Html.ValidationMessageFor(model => model.Cliente, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 text-lef">
+                <div class="form-group row">
+                    @Html.LabelFor(model => model.Tel_Cliente, htmlAttributes: new { @class = "col-sm-3 col-form-label" })
+                    <div class="col-sm-6 text-right">
+                        @Html.EditorFor(model => model.Tel_Cliente, new { htmlAttributes = new { @class = "form-control", @id = "txtTelefono", @style = "display:none;" } })
                         @Html.ValidationMessageFor(model => model.Tel_Cliente, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -67,31 +131,10 @@
         </div>
     </div>
 </nav>
-@*<nav class="navbar navbar-default col-md-12" style="padding-top:10px; display: flex; justify-content: space-between;">
-    <div class="container-fluid" style="text-align:center" id="contenedor1">
-        <h4 class="info" style="font-size:12px;">Muncheese Street Food</h4>
-        <h4 class="info" style="font-size:10px;">Sarchi Centro Comercial Valverde Vega</h4>
-        <h4 class="info" style="font-size:10px;">Local #19 o donde nos inviten con el FoodTruck, Alajuela, Costa Rica</h4>
-    </div>
-
-    <div class="container-fluid" style="text-align:right" id="contenedor2">
-        <br />
-        <div class="form-group" style="display: flex; flex-direction: column;">
-            <label for="codFactura" class="control-label" style="font-size:12px">Factura: </label>
-            <input type="text" class="form-control" id="codFactura" placeholder="" style="width:90px; height:20px">
-
-            <label for="fecha" class="control-label" style="font-size:12px;">Fecha:   </label>
-            <input type="date" class="form-control" id="fecha" placeholder="" style="width: 90px; height: 20px; font-size: 9px">
-
-            <label for="telefono" class="control-label" style="font-size:12px">Tel Cliente: </label>
-            <input type="tel" class="form-control" id="telefono" placeholder="" style="width: 85px; height: 20px; font-size: 9px">
-        </div>
-    </div>
-</nav>*@
 
 
 <div class="col-md-12" style="text-align:center;">
-   
+
 
     <table class="table table-striped table-hover ">
         <thead>
@@ -113,51 +156,25 @@
 
                 </th>
                 <th>
-                    1
+                    @*1*@
                 </th>
                 <th>
-                    Sin mostaza
+                    @*Sin mostaza*@
                 </th>
                 <th>
-                    1
+                    @*1*@
                 </th>
                 <th>
-                    4500
+                    @*4500*@
                 </th>
                 <th>
-                    2
+                    @*2*@
                 </th>
                 <th>
-                    Comer aqui
+                    @*Comer aqui*@
                 </th>
                 <th>
-                    4500
-                </th>
-            </tr>
-            <tr class="active">
-                <th>
-
-                </th>
-                <th>
-                    3
-                </th>
-                <th>
-                    N/A
-                </th>
-                <th>
-                    3
-                </th>
-                <th>
-                    5000
-                </th>
-                <th>
-                    2
-                </th>
-                <th>
-                    Comer aqui
-                </th>
-                <th>
-                    15000
+                    @*4500*@
                 </th>
             </tr>
             <tr class="active">
@@ -165,25 +182,51 @@
 
                 </th>
                 <th>
-                    1
+                    @*3*@
                 </th>
                 <th>
-                    Con muchas salsas
+                    @*N/A*@
                 </th>
                 <th>
-                    1
+                    @*3*@
                 </th>
                 <th>
-                    6500
+                    @*5000*@
                 </th>
                 <th>
-                    2
+                    @*2*@
                 </th>
                 <th>
-                    Comer aqui
+                    @*Comer aqui*@
                 </th>
                 <th>
-                    6500
+                    @*15000*@
+                </th>
+            </tr>
+            <tr class="active">
+                <th>
+
+                </th>
+                <th>
+                    @*1*@
+                </th>
+                <th>
+                    @*Con muchas salsas*@
+                </th>
+                <th>
+                    @*1*@
+                </th>
+                <th>
+                    @*6500*@
+                </th>
+                <th>
+                    @*2*@
+                </th>
+                <th>
+                    @*Comer aqui*@
+                </th>
+                <th>
+                    @*6500*@
                 </th>
             </tr>
             <tr class="active">
@@ -206,10 +249,10 @@
 
                 </th>
                 <th style="text-align:right;">
-                    Total:
+                    @*Total:*@
                 </th>
                 <th>
-                    26000
+                    @*26000*@
                 </th>
             </tr>
         </tbody>
@@ -222,3 +265,35 @@
 
 </div>
 
+@section Scripts {
+    <script type="text/javascript">
+        $(function () {
+            // Manejar el evento de selección del dropdownlist "Clientes"
+            $("#ddlClientes").change(function () {
+                var selectedCliente = $(this).val(); // Obtener el cliente seleccionado
+                if (selectedCliente !== "") {
+                    // Obtener el número de teléfono del cliente seleccionado mediante una petición AJAX
+                    $.ajax({
+                        url: '@Url.Action("ObtenerTelefonoCliente", "Facturas")',
+                        type: 'GET',
+                        dataType: 'json',
+                        data: { cliente: selectedCliente }, // Enviar el nombre del cliente seleccionado como parámetro
+                        success: function (telefono) {
+                            // Asignar el número de teléfono al campo correspondiente
+                            $("#txtTelefono").val(telefono);
+                            $("#txtTelefono").show(); // Mostrar el campo de texto
+                        },
+                        error: function () {
+                            console.log('Error al obtener el número de teléfono del cliente.');
+                        }
+                    });
+                } else {
+                    $("#txtTelefono").val(''); // Limpiar el campo si no hay cliente seleccionado
+                    $("#txtTelefono").hide(); // Ocultar el campo de texto
+                }
+            });
+        });
+
+
+    </script>
+}
