--- a/MVCMuncheese/Views/Shared/_Layout.cshtml
+++ b/MVCMuncheese/Views/Shared/_Layout.cshtml
@@ -61,6 +61,7 @@
                         <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                         <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                         <li>@Html.ActionLink("Caja", "TotalDia", "Home")</li>
+                        <li>@Html.ActionLink("Factura", "Factura", "Facturas")</li>
 
                     }
                     else
@@ -78,41 +79,41 @@
                     {
                         if (Convert.ToBoolean(Session["Logueado"]))
                         {
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ventas <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>@Html.ActionLink("Mesas", "Mesas", "Mesas")</li>
-                         </ul>
-                        </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ventas <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li>@Html.ActionLink("Mesas", "Mesas", "Mesas")</li>
+                                </ul>
+                            </li>
 
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mantenimiento <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>@Html.ActionLink("Ingredientes", "listarIngredientes_PA", "Ingredientes")</li>
-                                <li>@Html.ActionLink("Categorias", "listarTipo_Producto_ENT", "Tipo_Producto")</li>
-                                <li>@Html.ActionLink("Productos", "listarProductos_ENT", "Productos")</li>
-                                <li>@Html.ActionLink("Ingredientes por Producto", "listarIngredienteXProducto_PA", "IngredienteXProducto")</li>
-                                <li>@Html.ActionLink("Estados", "listarEstado_PA", "Estado")</li>
-                                <li>@Html.ActionLink("Mesas", "listarMesas_PA", "Mesas")</li>
-                                <li>@Html.ActionLink("DetalleOrden", "listarDetalleOrden_PA", "DetalleOrden")</li>
-                                <li>@Html.ActionLink("Ordenes", "listarOrdenes_ENT", "Ordenes")</li>
-                                <li>@Html.ActionLink("Clientes", "listarClientes_ENT", "Clientes")</li>
-                                <li>@Html.ActionLink("Proveedores", "listarProveedores_PA", "Proveedores")</li>
-                                <li>@Html.ActionLink("Perfiles", "listarPerfiles_PA", "Perfiles")</li>
-                                <li>@Html.ActionLink("Usuarios", "listarUsuarios_PA", "Usuarios")</li>
-                                <li>@Html.ActionLink("Perfil de Usuario", "listarPerfilUsuario_PA", "PerfilUsuario")</li>
-                                <li>@Html.ActionLink("Inventario", "listarInventario_PA", "Inventario")</li>
-                                <li>@Html.ActionLink("Facturas", "listarFacturas_PA", "Facturas")</li>
-                            </ul>
-                        </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mantenimiento <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li>@Html.ActionLink("Ingredientes", "listarIngredientes_PA", "Ingredientes")</li>
+                                    <li>@Html.ActionLink("Categorias", "listarTipo_Producto_ENT", "Tipo_Producto")</li>
+                                    <li>@Html.ActionLink("Productos", "listarProductos_ENT", "Productos")</li>
+                                    <li>@Html.ActionLink("Ingredientes por Producto", "listarIngredienteXProducto_PA", "IngredienteXProducto")</li>
+                                    <li>@Html.ActionLink("Estados", "listarEstado_PA", "Estado")</li>
+                                    <li>@Html.ActionLink("Mesas", "listarMesas_PA", "Mesas")</li>
+                                    <li>@Html.ActionLink("DetalleOrden", "listarDetalleOrden_PA", "DetalleOrden")</li>
+                                    <li>@Html.ActionLink("Ordenes", "listarOrdenes_ENT", "Ordenes")</li>
+                                    <li>@Html.ActionLink("Clientes", "listarClientes_ENT", "Clientes")</li>
+                                    <li>@Html.ActionLink("Proveedores", "listarProveedores_PA", "Proveedores")</li>
+                                    <li>@Html.ActionLink("Perfiles", "listarPerfiles_PA", "Perfiles")</li>
+                                    <li>@Html.ActionLink("Usuarios", "listarUsuarios_PA", "Usuarios")</li>
+                                    <li>@Html.ActionLink("Perfil de Usuario", "listarPerfilUsuario_PA", "PerfilUsuario")</li>
+                                    <li>@Html.ActionLink("Inventario", "listarInventario_PA", "Inventario")</li>
+                                    <li>@Html.ActionLink("Facturas", "listarFacturas_PA", "Facturas")</li>
+                                </ul>
+                            </li>
                         }
                     }
 
-                        @if (Convert.ToBoolean(Session["Logueado"]))
-                        {
-                            <li>@Html.ActionLink("Salir", "cerrarSesion", "Home")</li>
-                        }
-                    </ul>
+                    @if (Convert.ToBoolean(Session["Logueado"]))
+                    {
+                        <li>@Html.ActionLink("Salir", "cerrarSesion", "Home")</li>
+                    }
+                </ul>
             </div>
         </div>
     </div>
