--- a/MVCMuncheese/Views/Home/TotalDia.cshtml
+++ b/MVCMuncheese/Views/Home/TotalDia.cshtml
@@ -7,11 +7,6 @@
 
 <nav class="navbar navbar-default col-md-12" style="padding-top:10px;">
     <div class="container-fluid col-md-2">
-        <div class="col-md-12">
-            <div>
-                <h4 style="font-size:14px;">Total de venta</h4>
-            </div>
-        </div>
 
         <div class="col-md-12">
             <div>
@@ -21,7 +16,13 @@
 
         <div class="col-md-12">
             <div>
-                <h4 style="font-size:14px;"> Ventas para llevar</h4>
+                <h4 style="font-size:14px;">Ventas para llevar</h4>
+            </div>
+        </div>
+
+        <div class="col-md-12">
+            <div>
+                <h4 style="font-size:14px;">Total de ventas</h4>
             </div>
         </div>
 
