Ventana Ordenes muestra nombre en lugar de Id

--- a/MVCMuncheese/Views/Ordenes/listarOrdenes_ENT.cshtml
+++ b/MVCMuncheese/Views/Ordenes/listarOrdenes_ENT.cshtml
@@ -30,7 +30,8 @@
         </td>
 
         <td>
-            @Html.DisplayFor(modelItem => item.Estado)
+            @*@Html.DisplayFor(modelItem => item.Estado)*@
+            @Html.DisplayFor(modelItem => item.Nombre_estado)
         </td>
 
         <td>
