--- a/MVCMuncheese/Views/Shared/_Layout.cshtml
+++ b/MVCMuncheese/Views/Shared/_Layout.cshtml
@@ -75,10 +75,10 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mantenimiento <span class="caret"></span></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li>@Html.ActionLink("Ingredientes", "listarIngredientes_PA", "Ingredientes")</li>
+                                        @*<li>@Html.ActionLink("Ingredientes", "listarIngredientes_PA", "Ingredientes")</li>*@
                                         <li>@Html.ActionLink("Categorias", "listarTipo_Producto_ENT", "Tipo_Producto")</li>
                                         <li>@Html.ActionLink("Productos", "listarProductos_ENT", "Productos")</li>
-                                        <li>@Html.ActionLink("Ingredientes por Producto", "listarIngredienteXProducto_PA", "IngredienteXProducto")</li>
+                                        @*<li>@Html.ActionLink("Ingredientes por Producto", "listarIngredienteXProducto_PA", "IngredienteXProducto")</li>*@
                                         <li>@Html.ActionLink("Estados", "listarEstado_PA", "Estado")</li>
                                         <li>@Html.ActionLink("Mesas", "listarMesas_PA", "Mesas")</li>
                                         <li>@Html.ActionLink("DetalleOrden", "listarDetalleOrden_PA", "DetalleOrden")</li>
