--- a/MVCMuncheese/Views/Shared/_Layout.cshtml
+++ b/MVCMuncheese/Views/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
         @RenderBody()
         <hr />
         <footer class="form-group col-md-12">
-            <p>Creado por Andrey Arias &copy; UTC @DateTime.Now.Year - Muncheese Food Truck</p>
+            <p>Creado por Andrey Arias &copy;  @DateTime.Now.Year - Muncheese Food Truck</p>
         </footer>
     </div>
 
